--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        *{
+            box-sizing:border-box;
+        }
         div{
             width: 50%;
             display: block;
             margin: 10px auto;
             background: silver;
             padding: 20px;
+            
         }
         #myp1, #myp2{
             background-color: white;
@@ -27,6 +31,9 @@
             padding: 10px;
             background-color: rgba(129, 62, 201, 0.884);
             color: #fff;
+        }
+        input{
+            border: solid 1px;
         }
     </style>
 </head>
